添加回复问题进度条

--- a/web/index.html
+++ b/web/index.html
@@ -160,21 +160,21 @@
             </div>
             <div id="pk-item-main">
                 <div id="item_a" class="animated slideInUp answer-true">
-                    <div class="my-answer answer-show"><img src="images/true.png"></div>
+                    <div class="my-answer answer-show"></div>
                     <div class="options">答案1答案1答案1答案1答案1答案1</div>
                     <div class="opponent-answer"><img src="images/false.png"></div>
                 </div>
                 <div id="item_b" class="animated slideInUp answer-false">
                     <div class="my-answer"><img src="images/true.png"></div>
                     <div class="options">答案1</div>
-                    <div class="opponent-answer answer-show"><img src="images/false.png"></div>
+                    <div class="opponent-answer answer-show"></div>
                 </div>
-                <div id="item_c" class="animated slideInUp">
+                <div id="item_c" class="animated slideInUp answer-true">
                     <div class="my-answer"><img src="images/true.png"></div>
                     <div class="options">答案1</div>
                     <div class="opponent-answer"><img src="images/false.png"></div>
                 </div>
-                <div id="item_d" class="animated slideInUp">
+                <div id="item_d" class="animated slideInUp answer-false">
                     <div class="my-answer"><img src="images/true.png"></div>
                     <div class="options">答案1</div>
                     <div class="opponent-answer"><img src="images/false.png"></div>
