发送答案信息。

--- a/web/index.html
+++ b/web/index.html
@@ -151,20 +151,24 @@
                 <img src="images/avatar.png">
             </div>
         </div>
+        <div id="pk-process-left">
+            <div id="pk-process-left-num"></div>
+        </div>
+        <div id="pk-process-right">
+            <div id="pk-process-right-num"></div>
+        </div>
+        
         <div id="pk-main">
-            <p id="pk-question" class="animated bounceIn">下列哪个成语与项羽有关系？？？？？？啊啊啊啊啊啊啊啊啊<span id="question-num">4</span></p>
+            <p id="pk-question" class="animated bounceIn">下列哪个成语与项羽????下列哪个成语与项羽下<span id="question-num">4</span></p>
         </div>
         <div id="pk-footer">
-            <div id="pk-process-left">
-                <div id="pk-process-left-num"></div>
-            </div>
             <div id="pk-item-main">
-                <div id="item_a" class="animated slideInUp answer-true">
+                <div id="item_a" class="animated slideInUp answer-true-left">
                     <div class="my-answer answer-show"></div>
                     <div class="options">答案1答案1答案1答案1答案1答案1</div>
                     <div class="opponent-answer"><img src="images/false.png"></div>
                 </div>
-                <div id="item_b" class="animated slideInUp answer-false">
+                <div id="item_b" class="animated slideInUp answer-false-right">
                     <div class="my-answer"><img src="images/true.png"></div>
                     <div class="options">答案1</div>
                     <div class="opponent-answer answer-show"></div>
@@ -179,9 +183,6 @@
                     <div class="options">答案1</div>
                     <div class="opponent-answer"><img src="images/false.png"></div>
                 </div>
-            </div>
-            <div id="pk-process-right">
-                <div id="pk-process-right-num"></div>
             </div>
         </div>
     </div>
