添加游戏结束html + css

--- a/web/index.html
+++ b/web/index.html
@@ -188,6 +188,47 @@
     </div>
     <!--PK-->
 
+    <div id="pk-ending">
+        <div id="left-user">
+            <div class="bg_1">
+                <img src="images/ranking.png">
+            </div>
+            <div class="bg_2">
+                <p class="nickname">_Luo</p>
+                <p class="lv">Lv.12</p>
+                <p class="true-num">共答对0题</p>
+            </div>
+        </div>
+
+        <div id="right-user">
+            <div class="bg_1">
+                <img src="images/ranking.png">
+            </div>
+            <div class="bg_2">
+                <p class="nickname">_Luo</p>
+                <p class="lv">Lv.12</p>
+                <p class="true-num">共答对0题</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+
+        <div id="pk-ending-center">
+            <div class="box">
+                <div class="gold-icon"><img src="images/gold.png"></div>
+                <div id="get-gold">+20</div>
+            </div>
+
+            <div class="box">
+                <div class="gold-exp"><img src="images/exp.png"></div>
+                <div id="get-exp">+20</div>
+            </div>
+        </div>
+
+        <div id="pk-again">继续挑战</div>
+        <div id="go-index">返回首页</div>
+    </div>
+
     
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
