展示游戏结束页面

--- a/web/index.html
+++ b/web/index.html
@@ -191,23 +191,23 @@
     <div id="pk-ending">
         <div id="left-user">
             <div class="bg_1">
-                <img src="images/ranking.png">
+                <img id="left-avatar" src="{{avatar}}">
             </div>
             <div class="bg_2">
-                <p class="nickname">_Luo</p>
-                <p class="lv">Lv.12</p>
-                <p class="true-num">共答对0题</p>
+                <p id="left-nickname">{{nickname}}</p>
+                <p id="left-lv">{{lv}}</p>
+                <p id="left-true-num">共答对{{num}}题</p>
             </div>
         </div>
 
         <div id="right-user">
             <div class="bg_1">
-                <img src="images/ranking.png">
+                <img id="right-avatar" src="{{avatar}}">
             </div>
             <div class="bg_2">
-                <p class="nickname">_Luo</p>
-                <p class="lv">Lv.12</p>
-                <p class="true-num">共答对0题</p>
+                <p id="right-nickname">{{nickname}}</p>
+                <p id="right-lv">{{lv}}</p>
+                <p id="right-true-num">共答对{{num}}题</p>
             </div>
         </div>
 
@@ -216,12 +216,12 @@
         <div id="pk-ending-center">
             <div class="box">
                 <div class="gold-icon"><img src="images/gold.png"></div>
-                <div id="get-gold">+20</div>
+                <div id="get-gold">+0</div>
             </div>
 
             <div class="box">
                 <div class="gold-exp"><img src="images/exp.png"></div>
-                <div id="get-exp">+20</div>
+                <div id="get-exp">+0</div>
             </div>
         </div>
 
